{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 42,
  "lineage": "20317a33-eecb-bb1a-35b7-24e77e5c6133",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "primary_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-4f046638dfde8d6a8",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-4f046638dfde8d6a8",
            "domain": "vpc",
            "id": "eipalloc-4f046638dfde8d6a8",
            "public_dns": "ec2-127-217-164-189.compute-1.amazonaws.com",
            "public_ip": "127.217.164.189",
            "tags": {
              "Name": "primary-nat-eip-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-nat-eip-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "secondary_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-693d56a772fff139e",
            "arn": "arn:aws:ec2:us-west-2::elastic-ip/eipalloc-693d56a772fff139e",
            "domain": "vpc",
            "id": "eipalloc-693d56a772fff139e",
            "public_dns": "ec2-127-242-215-26.us-west-2.compute.amazonaws.com",
            "public_ip": "127.242.215.26",
            "tags": {
              "Name": "secondary-nat-eip-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-nat-eip-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-8c62324b9dcbd157c",
            "id": "igw-8c62324b9dcbd157c",
            "owner_id": "000000000000",
            "tags": {
              "Name": "primary-igw-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-igw-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:internet-gateway/igw-3e5a0ec467a1d6b3f",
            "id": "igw-3e5a0ec467a1d6b3f",
            "owner_id": "000000000000",
            "tags": {
              "Name": "secondary-igw-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-igw-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-4f046638dfde8d6a8",
            "association_id": "eipassoc-e89546e50b7c73c47",
            "connectivity_type": "public",
            "id": "nat-9cb27780d188cfa8c",
            "network_interface_id": "eni-8362811cfbb0370dc",
            "private_ip": "10.120.61.16",
            "public_ip": "127.217.164.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-d48d42f1ae07c535b",
            "tags": {
              "Name": "primary-nat-gateway-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-nat-gateway-ls-test",
              "Project": "multi-region-ha-ls-test"
            }
          },
          "dependencies": [
            "aws_eip.primary_nat",
            "aws_internet_gateway.primary",
            "aws_subnet.primary_public",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-693d56a772fff139e",
            "association_id": "eipassoc-149f933bf5b27adce",
            "connectivity_type": "public",
            "id": "nat-06b52429f85413abd",
            "network_interface_id": "eni-48a23ce7a0d882fc1",
            "private_ip": "10.193.90.105",
            "public_ip": "127.242.215.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-7ee0fa7f934c42f6b",
            "tags": {
              "Name": "secondary-nat-gateway-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-nat-gateway-ls-test",
              "Project": "multi-region-ha-ls-test"
            }
          },
          "dependencies": [
            "aws_eip.secondary_nat",
            "aws_internet_gateway.secondary",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-b25ca5abb953b95ef",
            "id": "rtb-b25ca5abb953b95ef",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-9cb27780d188cfa8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-private-rt-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-private-rt-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.primary_nat",
            "aws_internet_gateway.primary",
            "aws_nat_gateway.primary",
            "aws_subnet.primary_public",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-c44137f5037650b95",
            "id": "rtb-c44137f5037650b95",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-8c62324b9dcbd157c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-public-rt-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-public-rt-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.primary",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secondary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-be22ec1f405aee13d",
            "id": "rtb-be22ec1f405aee13d",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b52429f85413abd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-private-rt-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-private-rt-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.secondary_nat",
            "aws_internet_gateway.secondary",
            "aws_nat_gateway.secondary",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-c209b55b26be5d3e6",
            "id": "rtb-c209b55b26be5d3e6",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-3e5a0ec467a1d6b3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-public-rt-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-public-rt-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.secondary",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-593360f95d3095e21",
            "route_table_id": "rtb-b25ca5abb953b95ef",
            "subnet_id": "subnet-bf32b474bdd21ebc7"
          },
          "dependencies": [
            "aws_eip.primary_nat",
            "aws_internet_gateway.primary",
            "aws_nat_gateway.primary",
            "aws_route_table.primary_private",
            "aws_subnet.primary_private",
            "aws_subnet.primary_public",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-66291a9898197ecbd",
            "route_table_id": "rtb-b25ca5abb953b95ef",
            "subnet_id": "subnet-69e5ab635a25c4dd4"
          },
          "dependencies": [
            "aws_eip.primary_nat",
            "aws_internet_gateway.primary",
            "aws_nat_gateway.primary",
            "aws_route_table.primary_private",
            "aws_subnet.primary_private",
            "aws_subnet.primary_public",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-ad1868ab1880683d1",
            "route_table_id": "rtb-c44137f5037650b95",
            "subnet_id": "subnet-d48d42f1ae07c535b"
          },
          "dependencies": [
            "aws_internet_gateway.primary",
            "aws_route_table.primary_public",
            "aws_subnet.primary_public",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-b53bda3af8cf579f6",
            "route_table_id": "rtb-c44137f5037650b95",
            "subnet_id": "subnet-380f9121a80906889"
          },
          "dependencies": [
            "aws_internet_gateway.primary",
            "aws_route_table.primary_public",
            "aws_subnet.primary_public",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-e76210c9f04eab4df",
            "route_table_id": "rtb-be22ec1f405aee13d",
            "subnet_id": "subnet-3b5538d91bed55418"
          },
          "dependencies": [
            "aws_eip.secondary_nat",
            "aws_internet_gateway.secondary",
            "aws_nat_gateway.secondary",
            "aws_route_table.secondary_private",
            "aws_subnet.secondary_private",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-cb23560d4bc3b0486",
            "route_table_id": "rtb-be22ec1f405aee13d",
            "subnet_id": "subnet-2f4bb8c2474831ce3"
          },
          "dependencies": [
            "aws_eip.secondary_nat",
            "aws_internet_gateway.secondary",
            "aws_nat_gateway.secondary",
            "aws_route_table.secondary_private",
            "aws_subnet.secondary_private",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-88995ca75428becf7",
            "route_table_id": "rtb-c209b55b26be5d3e6",
            "subnet_id": "subnet-7ee0fa7f934c42f6b"
          },
          "dependencies": [
            "aws_internet_gateway.secondary",
            "aws_route_table.secondary_public",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-b21239d956b5b34dc",
            "route_table_id": "rtb-c209b55b26be5d3e6",
            "subnet_id": "subnet-9b11ddbfe32f2f868"
          },
          "dependencies": [
            "aws_internet_gateway.secondary",
            "aws_route_table.secondary_public",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-870aac1cdbba5bb0f",
            "description": "Security group for RDS MySQL in primary region",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-870aac1cdbba5bb0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL access from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-primary-sg-ls-test",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-primary-sg-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "rds-primary-sg-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:security-group/sg-318a7ee0a11f9b8f7",
            "description": "Security group for RDS MySQL in secondary region",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-318a7ee0a11f9b8f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL access from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-secondary-sg-ls-test",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-secondary-sg-ls-test"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "rds-secondary-sg-ls-test",
              "Project": "multi-region-ha-ls-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-bf32b474bdd21ebc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-bf32b474bdd21ebc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-private-subnet-1-ls-test",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-private-subnet-1-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "private"
            },
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-69e5ab635a25c4dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-69e5ab635a25c4dd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-private-subnet-2-ls-test",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-private-subnet-2-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "private"
            },
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-d48d42f1ae07c535b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-d48d42f1ae07c535b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-public-subnet-1-ls-test",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-public-subnet-1-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "public"
            },
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-380f9121a80906889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-380f9121a80906889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-public-subnet-2-ls-test",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-public-subnet-2-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "public"
            },
            "vpc_id": "vpc-3445646c23fdc761d"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-3b5538d91bed55418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-3b5538d91bed55418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-private-subnet-1-ls-test",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-private-subnet-1-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "private"
            },
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "dependencies": [
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-2f4bb8c2474831ce3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-2f4bb8c2474831ce3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-private-subnet-2-ls-test",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-private-subnet-2-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "private"
            },
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "dependencies": [
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-7ee0fa7f934c42f6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-7ee0fa7f934c42f6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-public-subnet-1-ls-test",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-public-subnet-1-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "public"
            },
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "dependencies": [
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-9b11ddbfe32f2f868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-9b11ddbfe32f2f868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-public-subnet-2-ls-test",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-public-subnet-2-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Type": "public"
            },
            "vpc_id": "vpc-c1f7ac93a92b2d702"
          },
          "dependencies": [
            "aws_vpc.secondary",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-3445646c23fdc761d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-208898f6cebeccd54",
            "default_route_table_id": "rtb-7dbc0d08b123eb0d3",
            "default_security_group_id": "sg-8d804b54338c0126b",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-3445646c23fdc761d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-7dbc0d08b123eb0d3",
            "owner_id": "000000000000",
            "tags": {
              "Name": "primary-vpc-ls-test",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "primary-vpc-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Region": "us-east-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:vpc/vpc-c1f7ac93a92b2d702",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-a7f3a541f06a1fa6e",
            "default_route_table_id": "rtb-ac51f9b4c938d4130",
            "default_security_group_id": "sg-da178a8a7b06d5c22",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-c1f7ac93a92b2d702",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-ac51f9b4c938d4130",
            "owner_id": "000000000000",
            "tags": {
              "Name": "secondary-vpc-ls-test",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "ls-test",
              "ManagedBy": "terraform",
              "Name": "secondary-vpc-ls-test",
              "Project": "multi-region-ha-ls-test",
              "Region": "us-west-2"
            }
          }
        }
      ]
    }
  ]
}